--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
     "name": "emboy/webshop",
+    "require": {
+        "phpunit/phpunit": "^9.6"
+    },
     "autoload": {
         "psr-4": {
-            "Webshop\\": "src/"
+            "login\\": "src/"
         }
-    },
-    "authors": [
-        {
-            "name": "EmreHBas",
-            "email": "112864371+EmreHBas@users.noreply.github.com"
-        }
-    ],
-    "require": {}
+    }
 }
